@@ -1,3 +1,4 @@
+6/9/14 check in dependencies.json for 1.1.0
 # 1.0.0 6/9/14
 6/2/14 check in dependencies.json for 1.1.0-rc.1
 # 1.1.0-rc.1 6/2/14
